attempting to fix width issue on mobile screens

--- a/src/components/NavHeader/Header.css
+++ b/src/components/NavHeader/Header.css
@@ -67,6 +67,10 @@
     display: none;
   }
 
+  #root, body{
+    min-width: 100vw;
+  }
+
 }
 
 @media screen and (min-width: 1100px) {
